Add CSS styles from old site.

--- a/styles/tailwind.css
+++ b/styles/tailwind.css
@@ -4,6 +4,7 @@
  */
 
 @import 'tailwindcss/base';
+@import 'base/layout';
 
 /**
  * Components
@@ -11,7 +12,10 @@
  */
 
 @import 'tailwindcss/components';
+@import 'components/bio-tagline';
 @import 'components/button';
+@import 'components/entry';
+@import 'components/header';
 
 /**
   * Utilities
