--- a/styles/components/numbered-list.css
+++ b/styles/components/numbered-list.css
@@ -1,5 +1,5 @@
 @layer components {
-  .bio-tagline {
+  .numbered-list {
     @apply inline-flex flex-col;
     text-shadow: none;
     counter-reset: list-number;
