feat: theme color setup

--- a/styles/components/entry.css
+++ b/styles/components/entry.css
@@ -6,8 +6,8 @@
   }
 
   .entry__header {
-    text-shadow: -3px -3px 10px #7dc149, 3px -3px 15px #7dc149, -3px 3px 10px #7dc149,
-      3px 3px 15px #7dc149;
+    text-shadow: -3px -3px 10px var(--color-primary-500), 3px -3px 15px var(--color-primary-500),
+      -3px 3px 10px var(--color-primary-500), 3px 3px 15px var(--color-primary-500);
   }
 
   .entry__body {
