--- a/app/styles/tailwind.css
+++ b/app/styles/tailwind.css
@@ -447,10 +447,100 @@ Ensure the default browser behavior of the `hidden` attribute.
 /* Site Layout
 ------------------------------------------------------------------------------*/
 
+:root {
+  --color-primary-50: #ffffff;
+  --color-primary-100: #fafdf9;
+  --color-primary-200: #dbeecd;
+  --color-primary-300: #bcdfa1;
+  --color-primary-400: #9cd075;
+  --color-primary-500: #7dc149;
+  --color-primary-600: #49a24c;
+  --color-primary-700: #15824e;
+  --color-primary-800: #175c35;
+  --color-primary-900: #18351c;
+  transition-property: color, background-color, border-color, fill, stroke, -webkit-text-decoration-color;
+  transition-property: color, background-color, border-color, text-decoration-color, fill, stroke;
+  transition-property: color, background-color, border-color, text-decoration-color, fill, stroke, -webkit-text-decoration-color;
+  transition-timing-function: cubic-bezier(0.4, 0, 0.2, 1);
+  transition-duration: 150ms;
+}
+
+html:has(button[data-theme='blue']) {
+  --color-primary-50: #f0f9ff;
+  --color-primary-100: #e0f2fe;
+  --color-primary-200: #bae6fd;
+  --color-primary-300: #7dd3fc;
+  --color-primary-400: #38bdf8;
+  --color-primary-500: #0ea5e9;
+  --color-primary-600: #0284c7;
+  --color-primary-700: #0369a1;
+  --color-primary-800: #075985;
+  --color-primary-900: #072b40;
+}
+
+html:has(button[data-theme='purple']) {
+  --color-primary-50: #eef2ff;
+  --color-primary-100: #e0e7ff;
+  --color-primary-200: #c7d2fe;
+  --color-primary-300: #a5b4fc;
+  --color-primary-400: #818cf8;
+  --color-primary-500: #7a7df3;
+  --color-primary-600: #4f46e5;
+  --color-primary-700: #4338ca;
+  --color-primary-800: #3730a3;
+  --color-primary-900: #1c1a49;
+}
+
+html:has(button[data-theme='yellow']) {
+  --color-primary-50: #fefce8;
+  --color-primary-100: #fef9c3;
+  --color-primary-200: #fef08a;
+  --color-primary-300: #fde047;
+  --color-primary-400: #facc15;
+  --color-primary-500: #eab308;
+  --color-primary-600: #ca8a04;
+  --color-primary-700: #a16207;
+  --color-primary-800: #854d0e;
+  --color-primary-900: #45260b;
+}
+
+html:has(button[data-theme='gray']) {
+  --color-primary-50: #fafaf9;
+  --color-primary-100: #f5f5f4;
+  --color-primary-200: #e7e5e4;
+  --color-primary-300: #d6d3d1;
+  --color-primary-400: #a8a29e;
+  --color-primary-500: #78716c;
+  --color-primary-600: #57534e;
+  --color-primary-700: #44403c;
+  --color-primary-800: #292524;
+  --color-primary-900: #0e0d0c;
+}
+
+html:has(button[data-theme='orange']) {
+  --color-primary-50: #fff7ed;
+  --color-primary-100: #ffedd5;
+  --color-primary-200: #fed7aa;
+  --color-primary-300: #fdba74;
+  --color-primary-400: #fb923c;
+  --color-primary-500: #f97316;
+  --color-primary-600: #ea580c;
+  --color-primary-700: #c2410c;
+  --color-primary-800: #9a3412;
+  --color-primary-900: #4f1d0c;
+}
+
 /**
  * Components
  * -----------------------------------------------------------------------------
  */
+
+.button {
+  border-radius: 0.25rem;
+  --tw-bg-opacity: 1;
+  background-color: rgb(163 163 163 / var(--tw-bg-opacity));
+  padding: 0.5rem;
+}
 
 .entry {
   display: flex;
@@ -458,8 +548,8 @@ Ensure the default browser behavior of the `hidden` attribute.
 }
 
 .entry__header {
-    text-shadow: -3px -3px 10px #7dc149, 3px -3px 15px #7dc149, -3px 3px 10px #7dc149,
-      3px 3px 15px #7dc149;
+    text-shadow: -3px -3px 10px var(--color-primary-500), 3px -3px 15px var(--color-primary-500),
+      -3px 3px 10px var(--color-primary-500), 3px 3px 15px var(--color-primary-500);
   }
 
 .entry__body {
@@ -473,8 +563,7 @@ Ensure the default browser behavior of the `hidden` attribute.
 
 .entry__content a {
   border-bottom-width: 2px;
-  --tw-border-opacity: 1;
-  border-color: rgb(125 193 73 / var(--tw-border-opacity));
+  border-color: var(--color-primary-500);
   color: inherit;
   -webkit-text-decoration-line: none;
           text-decoration-line: none;
@@ -593,26 +682,42 @@ Ensure the default browser behavior of the `hidden` attribute.
       transform: translate(var(--tw-translate-x), var(--tw-translate-y)) rotate(var(--tw-rotate)) skewX(var(--tw-skew-x)) skewY(var(--tw-skew-y)) scaleX(var(--tw-scale-x)) scaleY(var(--tw-scale-y));
       align-items: center;
       justify-content: center;
-      --tw-bg-opacity: 1;
-      background-color: rgb(24 53 28 / var(--tw-bg-opacity));
+      background-color: var(--color-primary-900);
       font-size: 0.75rem;
       line-height: 1rem;
       font-weight: 600;
       line-height: 1;
-      --tw-text-opacity: 1;
-      color: rgb(125 193 73 / var(--tw-text-opacity));
+      color: var(--color-primary-500);
     }
+
+.theme-select {
+  display: none;
+}
 
 /* Entry
 ------------------------------------------------------------------------------*/
+
+@supports selector(:has(*)) {
+  .theme-select {
+    display: block;
+  }
+}
 
 /**
  * Utilities
  * -----------------------------------------------------------------------------
  */
 
-.pointer-events-none {
-  pointer-events: none;
+.sr-only {
+  position: absolute;
+  width: 1px;
+  height: 1px;
+  padding: 0;
+  margin: -1px;
+  overflow: hidden;
+  clip: rect(0, 0, 0, 0);
+  white-space: nowrap;
+  border-width: 0;
 }
 
 .static {
@@ -629,11 +734,6 @@ Ensure the default browser behavior of the `hidden` attribute.
 
 .relative {
   position: relative;
-}
-
-.inset-y-0 {
-  top: 0px;
-  bottom: 0px;
 }
 
 .bottom-0 {
@@ -660,16 +760,12 @@ Ensure the default browser behavior of the `hidden` attribute.
   top: 50%;
 }
 
-.top-4 {
-  top: 1rem;
+.top-5 {
+  top: 1.25rem;
 }
 
-.right-4 {
-  right: 1rem;
-}
-
-.right-0 {
-  right: 0px;
+.right-5 {
+  right: 1.25rem;
 }
 
 .z-10 {
@@ -682,6 +778,10 @@ Ensure the default browser behavior of the `hidden` attribute.
 
 .z-50 {
   z-index: 50;
+}
+
+.z-\[100\] {
+  z-index: 100;
 }
 
 .float-right {
@@ -721,10 +821,6 @@ Ensure the default browser behavior of the `hidden` attribute.
   margin-left: 0.25rem;
 }
 
-.mt-1 {
-  margin-top: 0.25rem;
-}
-
 .block {
   display: block;
 }
@@ -757,8 +853,40 @@ Ensure the default browser behavior of the `hidden` attribute.
   height: 1rem;
 }
 
+.h-6 {
+  height: 1.5rem;
+}
+
 .h-5 {
   height: 1.25rem;
+}
+
+.h-\[4\.5\] {
+  height: 4.5;
+}
+
+.h-\[4\.5rem\] {
+  height: 4.5rem;
+}
+
+.h-\[2rem\] {
+  height: 2rem;
+}
+
+.h-\[1\.25rem\] {
+  height: 1.25rem;
+}
+
+.h-\[1\.2rem\] {
+  height: 1.2rem;
+}
+
+.h-\[1\.5rem\] {
+  height: 1.5rem;
+}
+
+.h-\[1\.15rem\] {
+  height: 1.15rem;
 }
 
 .max-h-screen {
@@ -781,12 +909,12 @@ Ensure the default browser behavior of the `hidden` attribute.
   width: 4rem;
 }
 
-.w-72 {
-  width: 18rem;
-}
-
 .w-4 {
   width: 1rem;
+}
+
+.w-6 {
+  width: 1.5rem;
 }
 
 .w-5 {
@@ -795,6 +923,34 @@ Ensure the default browser behavior of the `hidden` attribute.
 
 .w-44 {
   width: 11rem;
+}
+
+.w-\[4\.5\] {
+  width: 4.5;
+}
+
+.w-\[4\.5rem\] {
+  width: 4.5rem;
+}
+
+.w-\[2rem\] {
+  width: 2rem;
+}
+
+.w-\[1\.25rem\] {
+  width: 1.25rem;
+}
+
+.w-\[1\.2rem\] {
+  width: 1.2rem;
+}
+
+.w-\[1\.5rem\] {
+  width: 1.5rem;
+}
+
+.w-\[1\.15rem\] {
+  width: 1.15rem;
 }
 
 .max-w-0 {
@@ -835,10 +991,6 @@ Ensure the default browser behavior of the `hidden` attribute.
   transform: translate(var(--tw-translate-x), var(--tw-translate-y)) rotate(var(--tw-rotate)) skewX(var(--tw-skew-x)) skewY(var(--tw-skew-y)) scaleX(var(--tw-scale-x)) scaleY(var(--tw-scale-y));
 }
 
-.cursor-default {
-  cursor: default;
-}
-
 .select-none {
   -webkit-user-select: none;
      -moz-user-select: none;
@@ -873,8 +1025,7 @@ Ensure the default browser behavior of the `hidden` attribute.
 }
 
 .divide-primary-100 > :not([hidden]) ~ :not([hidden]) {
-  --tw-divide-opacity: 1;
-  border-color: rgb(250 253 249 / var(--tw-divide-opacity));
+  border-color: var(--color-primary-100);
 }
 
 .overflow-auto {
@@ -883,12 +1034,6 @@ Ensure the default browser behavior of the `hidden` attribute.
 
 .overflow-hidden {
   overflow: hidden;
-}
-
-.truncate {
-  overflow: hidden;
-  text-overflow: ellipsis;
-  white-space: nowrap;
 }
 
 .whitespace-normal {
@@ -911,8 +1056,8 @@ Ensure the default browser behavior of the `hidden` attribute.
   border-radius: 0.25rem;
 }
 
-.rounded-lg {
-  border-radius: 0.5rem;
+.rounded-full {
+  border-radius: 9999px;
 }
 
 .border-b-2 {
@@ -928,8 +1073,7 @@ Ensure the default browser behavior of the `hidden` attribute.
 }
 
 .bg-primary-500 {
-  --tw-bg-opacity: 1;
-  background-color: rgb(125 193 73 / var(--tw-bg-opacity));
+  background-color: var(--color-primary-500);
 }
 
 .bg-white {
@@ -938,13 +1082,11 @@ Ensure the default browser behavior of the `hidden` attribute.
 }
 
 .bg-primary-900 {
-  --tw-bg-opacity: 1;
-  background-color: rgb(24 53 28 / var(--tw-bg-opacity));
+  background-color: var(--color-primary-900);
 }
 
 .bg-primary-800 {
-  --tw-bg-opacity: 1;
-  background-color: rgb(23 92 53 / var(--tw-bg-opacity));
+  background-color: var(--color-primary-800);
 }
 
 .bg-black {
@@ -953,8 +1095,7 @@ Ensure the default browser behavior of the `hidden` attribute.
 }
 
 .bg-primary-200 {
-  --tw-bg-opacity: 1;
-  background-color: rgb(219 238 205 / var(--tw-bg-opacity));
+  background-color: var(--color-primary-200);
 }
 
 .bg-opacity-0 {
@@ -966,23 +1107,23 @@ Ensure the default browser behavior of the `hidden` attribute.
 }
 
 .fill-primary-700 {
-  fill: #15824e;
+  fill: var(--color-primary-700);
 }
 
 .fill-primary-900 {
-  fill: #18351c;
+  fill: var(--color-primary-900);
 }
 
 .fill-primary-600 {
-  fill: #49A24C;
+  fill: var(--color-primary-600);
 }
 
 .fill-primary-800 {
-  fill: #175C35;
+  fill: var(--color-primary-800);
 }
 
 .fill-primary-500 {
-  fill: #7dc149;
+  fill: var(--color-primary-500);
 }
 
 .object-cover {
@@ -1028,6 +1169,11 @@ Ensure the default browser behavior of the `hidden` attribute.
   padding-right: 1rem;
 }
 
+.py-1 {
+  padding-top: 0.25rem;
+  padding-bottom: 0.25rem;
+}
+
 .px-3 {
   padding-left: 0.75rem;
   padding-right: 0.75rem;
@@ -1038,9 +1184,9 @@ Ensure the default browser behavior of the `hidden` attribute.
   padding-bottom: 0.5rem;
 }
 
-.py-1 {
-  padding-top: 0.25rem;
-  padding-bottom: 0.25rem;
+.px-2 {
+  padding-left: 0.5rem;
+  padding-right: 0.5rem;
 }
 
 .pb-30vw {
@@ -1049,26 +1195,6 @@ Ensure the default browser behavior of the `hidden` attribute.
 
 .pt-32 {
   padding-top: 8rem;
-}
-
-.pl-3 {
-  padding-left: 0.75rem;
-}
-
-.pr-10 {
-  padding-right: 2.5rem;
-}
-
-.pr-2 {
-  padding-right: 0.5rem;
-}
-
-.pl-10 {
-  padding-left: 2.5rem;
-}
-
-.pr-4 {
-  padding-right: 1rem;
 }
 
 .text-left {
@@ -1146,13 +1272,11 @@ Ensure the default browser behavior of the `hidden` attribute.
 }
 
 .text-primary-800 {
-  --tw-text-opacity: 1;
-  color: rgb(23 92 53 / var(--tw-text-opacity));
+  color: var(--color-primary-800);
 }
 
 .text-primary-900 {
-  --tw-text-opacity: 1;
-  color: rgb(24 53 28 / var(--tw-text-opacity));
+  color: var(--color-primary-900);
 }
 
 .text-inherit {
@@ -1164,24 +1288,21 @@ Ensure the default browser behavior of the `hidden` attribute.
   color: rgb(255 255 255 / var(--tw-text-opacity));
 }
 
-.text-gray-400 {
-  --tw-text-opacity: 1;
-  color: rgb(163 163 163 / var(--tw-text-opacity));
+.text-primary-400 {
+  color: var(--color-primary-400);
 }
 
-.text-primary-600 {
-  --tw-text-opacity: 1;
-  color: rgb(73 162 76 / var(--tw-text-opacity));
-}
-
-.text-gray-900 {
-  --tw-text-opacity: 1;
-  color: rgb(23 23 23 / var(--tw-text-opacity));
+.text-primary-700 {
+  color: var(--color-primary-700);
 }
 
 .no-underline {
   -webkit-text-decoration-line: none;
           text-decoration-line: none;
+}
+
+.opacity-30 {
+  opacity: 0.3;
 }
 
 .opacity-20 {
@@ -1200,16 +1321,23 @@ Ensure the default browser behavior of the `hidden` attribute.
   opacity: 1;
 }
 
+.mix-blend-lighten {
+  mix-blend-mode: lighten;
+}
+
+.mix-blend-hard-light {
+  mix-blend-mode: hard-light;
+}
+
 .shadow-lg {
   --tw-shadow: 0 10px 15px -3px rgb(0 0 0 / 0.1), 0 4px 6px -4px rgb(0 0 0 / 0.1);
   --tw-shadow-colored: 0 10px 15px -3px var(--tw-shadow-color), 0 4px 6px -4px var(--tw-shadow-color);
   box-shadow: var(--tw-ring-offset-shadow, 0 0 #0000), var(--tw-ring-shadow, 0 0 #0000), var(--tw-shadow);
 }
 
-.shadow-md {
-  --tw-shadow: 0 4px 6px -1px rgb(0 0 0 / 0.1), 0 2px 4px -2px rgb(0 0 0 / 0.1);
-  --tw-shadow-colored: 0 4px 6px -1px var(--tw-shadow-color), 0 2px 4px -2px var(--tw-shadow-color);
-  box-shadow: var(--tw-ring-offset-shadow, 0 0 #0000), var(--tw-ring-shadow, 0 0 #0000), var(--tw-shadow);
+.outline-none {
+  outline: 2px solid transparent;
+  outline-offset: 2px;
 }
 
 .ring-1 {
@@ -1279,8 +1407,7 @@ Ensure the default browser behavior of the `hidden` attribute.
 }
 
 .hover\:border-primary-500:hover {
-  --tw-border-opacity: 1;
-  border-color: rgb(125 193 73 / var(--tw-border-opacity));
+  border-color: var(--color-primary-500);
 }
 
 .hover\:bg-opacity-10:hover {
@@ -1311,10 +1438,6 @@ Ensure the default browser behavior of the `hidden` attribute.
 
 .focus-visible\:ring-opacity-75:focus-visible {
   --tw-ring-opacity: 0.75;
-}
-
-.focus-visible\:ring-offset-2:focus-visible {
-  --tw-ring-offset-width: 2px;
 }
 
 .group:hover .group-hover\:max-w-6xl {
@@ -1348,10 +1471,16 @@ Ensure the default browser behavior of the `hidden` attribute.
     padding-left: 2.5rem;
     padding-right: 2.5rem;
   }
+}
 
-  .sm\:text-sm {
-    font-size: 0.875rem;
-    line-height: 1.25rem;
+@media (min-width: 768px) {
+
+  .md\:flex {
+    display: flex;
+  }
+
+  .md\:items-center {
+    align-items: center;
   }
 }
 
@@ -1412,6 +1541,12 @@ Ensure the default browser behavior of the `hidden` attribute.
 
   .lg\:pb-10 {
     padding-bottom: 2.5rem;
+  }
+
+  .lg\:shadow-2xl {
+    --tw-shadow: 0 25px 50px -12px rgb(0 0 0 / 0.25);
+    --tw-shadow-colored: 0 25px 50px -12px var(--tw-shadow-color);
+    box-shadow: var(--tw-ring-offset-shadow, 0 0 #0000), var(--tw-ring-shadow, 0 0 #0000), var(--tw-shadow);
   }
 }
 
