--- a/app/styles/tailwind.css
+++ b/app/styles/tailwind.css
@@ -941,10 +941,6 @@ html:has(button[data-theme='orange']) {
   height: 1.25rem;
 }
 
-.h-12 {
-  height: 3rem;
-}
-
 .max-h-screen {
   max-height: 100vh;
 }
@@ -977,32 +973,16 @@ html:has(button[data-theme='orange']) {
   width: 1.5rem;
 }
 
-.w-44 {
-  width: 11rem;
-}
-
-.w-20 {
-  width: 5rem;
-}
-
-.w-36 {
-  width: 9rem;
-}
-
 .w-28 {
   width: 7rem;
-}
-
-.w-32 {
-  width: 8rem;
 }
 
 .w-5 {
   width: 1.25rem;
 }
 
-.w-12 {
-  width: 3rem;
+.w-44 {
+  width: 11rem;
 }
 
 .max-w-0 {
@@ -1028,17 +1008,6 @@ html:has(button[data-theme='orange']) {
 
 .-translate-y-1\/2 {
   --tw-translate-y: -50%;
-  transform: translate(var(--tw-translate-x), var(--tw-translate-y)) rotate(var(--tw-rotate)) skewX(var(--tw-skew-x)) skewY(var(--tw-skew-y)) scaleX(var(--tw-scale-x)) scaleY(var(--tw-scale-y));
-}
-
-.translate-x-1\/2 {
-  --tw-translate-x: 50%;
-  transform: translate(var(--tw-translate-x), var(--tw-translate-y)) rotate(var(--tw-rotate)) skewX(var(--tw-skew-x)) skewY(var(--tw-skew-y)) scaleX(var(--tw-scale-x)) scaleY(var(--tw-scale-y));
-}
-
-.scale-125 {
-  --tw-scale-x: 1.25;
-  --tw-scale-y: 1.25;
   transform: translate(var(--tw-translate-x), var(--tw-translate-y)) rotate(var(--tw-rotate)) skewX(var(--tw-skew-x)) skewY(var(--tw-skew-y)) scaleX(var(--tw-scale-x)) scaleY(var(--tw-scale-y));
 }
 
@@ -1084,10 +1053,6 @@ html:has(button[data-theme='orange']) {
   justify-content: center;
 }
 
-.gap-4 {
-  gap: 1rem;
-}
-
 .gap-2 {
   gap: 0.5rem;
 }
@@ -1122,6 +1087,10 @@ html:has(button[data-theme='orange']) {
   border-radius: 0.125rem;
 }
 
+.rounded-lg {
+  border-radius: 0.5rem;
+}
+
 .rounded-full {
   border-radius: 9999px;
 }
@@ -1132,10 +1101,6 @@ html:has(button[data-theme='orange']) {
 
 .rounded {
   border-radius: 0.25rem;
-}
-
-.rounded-lg {
-  border-radius: 0.5rem;
 }
 
 .border-b-2 {
@@ -1167,59 +1132,26 @@ html:has(button[data-theme='orange']) {
   background-color: var(--color-primary-800);
 }
 
+.bg-primary-50 {
+  background-color: var(--color-primary-50);
+}
+
 .bg-black {
   --tw-bg-opacity: 1;
   background-color: rgb(0 0 0 / var(--tw-bg-opacity));
-}
-
-.bg-primary-200 {
-  background-color: var(--color-primary-200);
 }
 
 .bg-primary-300 {
   background-color: var(--color-primary-300);
 }
 
-.bg-primary-50 {
-  background-color: var(--color-primary-50);
-}
-
-.bg-gray-100 {
-  --tw-bg-opacity: 1;
-  background-color: rgb(245 245 245 / var(--tw-bg-opacity));
+.bg-primary-200 {
+  background-color: var(--color-primary-200);
 }
 
 .bg-gray-900 {
   --tw-bg-opacity: 1;
   background-color: rgb(23 23 23 / var(--tw-bg-opacity));
-}
-
-.bg-gray-200 {
-  --tw-bg-opacity: 1;
-  background-color: rgb(229 229 229 / var(--tw-bg-opacity));
-}
-
-.bg-gray-300 {
-  --tw-bg-opacity: 1;
-  background-color: rgb(212 212 212 / var(--tw-bg-opacity));
-}
-
-.bg-gray-500 {
-  --tw-bg-opacity: 1;
-  background-color: rgb(115 115 115 / var(--tw-bg-opacity));
-}
-
-.bg-gray-800 {
-  --tw-bg-opacity: 1;
-  background-color: rgb(38 38 38 / var(--tw-bg-opacity));
-}
-
-.bg-primary-400 {
-  background-color: var(--color-primary-400);
-}
-
-.bg-primary-700 {
-  background-color: var(--color-primary-700);
 }
 
 .bg-opacity-0 {
@@ -1293,11 +1225,6 @@ html:has(button[data-theme='orange']) {
   padding-right: 1rem;
 }
 
-.py-1 {
-  padding-top: 0.25rem;
-  padding-bottom: 0.25rem;
-}
-
 .py-2 {
   padding-top: 0.5rem;
   padding-bottom: 0.5rem;
@@ -1308,14 +1235,14 @@ html:has(button[data-theme='orange']) {
   padding-right: 0.5rem;
 }
 
+.py-1 {
+  padding-top: 0.25rem;
+  padding-bottom: 0.25rem;
+}
+
 .px-3 {
   padding-left: 0.75rem;
   padding-right: 0.75rem;
-}
-
-.py-3 {
-  padding-top: 0.75rem;
-  padding-bottom: 0.75rem;
 }
 
 .pb-30vw {
@@ -1421,47 +1348,12 @@ html:has(button[data-theme='orange']) {
   color: rgb(255 255 255 / var(--tw-text-opacity));
 }
 
-.text-primary-400 {
-  color: var(--color-primary-400);
-}
-
 .text-primary-700 {
   color: var(--color-primary-700);
 }
 
-.text-gray-900 {
-  --tw-text-opacity: 1;
-  color: rgb(23 23 23 / var(--tw-text-opacity));
-}
-
-.text-gray-50 {
-  --tw-text-opacity: 1;
-  color: rgb(250 250 250 / var(--tw-text-opacity));
-}
-
-.text-gray-600 {
-  --tw-text-opacity: 1;
-  color: rgb(82 82 82 / var(--tw-text-opacity));
-}
-
-.text-primary-50 {
-  color: var(--color-primary-50);
-}
-
-.text-primary-200 {
-  color: var(--color-primary-200);
-}
-
-.text-primary-300 {
-  color: var(--color-primary-300);
-}
-
-.text-primary-600 {
-  color: var(--color-primary-600);
-}
-
-.text-primary-100 {
-  color: var(--color-primary-100);
+.text-primary-400 {
+  color: var(--color-primary-400);
 }
 
 .no-underline {
@@ -1487,6 +1379,10 @@ html:has(button[data-theme='orange']) {
 
 .opacity-0 {
   opacity: 0;
+}
+
+.opacity-60 {
+  opacity: 0.6;
 }
 
 .mix-blend-lighten {
@@ -1530,11 +1426,6 @@ html:has(button[data-theme='orange']) {
 
 .grayscale {
   --tw-grayscale: grayscale(100%);
-  filter: var(--tw-blur) var(--tw-brightness) var(--tw-contrast) var(--tw-grayscale) var(--tw-hue-rotate) var(--tw-invert) var(--tw-saturate) var(--tw-sepia) var(--tw-drop-shadow);
-}
-
-.invert {
-  --tw-invert: invert(100%);
   filter: var(--tw-blur) var(--tw-brightness) var(--tw-contrast) var(--tw-grayscale) var(--tw-hue-rotate) var(--tw-invert) var(--tw-saturate) var(--tw-sepia) var(--tw-drop-shadow);
 }
 
