fix: remove inline style to break words

--- a/app/styles/tailwind.css
+++ b/app/styles/tailwind.css
@@ -1062,6 +1062,10 @@ html:has(div[data-theme='orange']) {
   white-space: nowrap;
 }
 
+.break-words {
+  overflow-wrap: break-word;
+}
+
 .rounded {
   border-radius: 0.25rem;
 }
