--- a/app/styles/tailwind.css
+++ b/app/styles/tailwind.css
@@ -1132,6 +1132,14 @@ html:has(div[data-theme='orange']) {
   background-color: rgb(255 255 255 / var(--tw-bg-opacity));
 }
 
+.bg-primary-600 {
+  background-color: var(--color-primary-600);
+}
+
+.bg-primary-400 {
+  background-color: var(--color-primary-400);
+}
+
 .bg-opacity-0 {
   --tw-bg-opacity: 0;
 }
@@ -1360,6 +1368,18 @@ html:has(div[data-theme='orange']) {
 
 .opacity-60 {
   opacity: 0.6;
+}
+
+.mix-blend-normal {
+  mix-blend-mode: normal;
+}
+
+.mix-blend-multiply {
+  mix-blend-mode: multiply;
+}
+
+.mix-blend-screen {
+  mix-blend-mode: screen;
 }
 
 .mix-blend-lighten {
