--- a/app/styles/tailwind.css
+++ b/app/styles/tailwind.css
@@ -888,6 +888,10 @@ html:has(div[data-theme='orange']) {
   display: inline-block;
 }
 
+.inline {
+  display: inline;
+}
+
 .flex {
   display: flex;
 }
